[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
serde = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
termcolor = "1.1.3"
toml = "0.5.8"
